gerando token jwt
