# sisauth/routes/api.php
@@ -5,9 +5,9 @@ use App\Http\Controllers\AuthController; // Adicionando o uso do namespace compl
 use App\Http\Controllers\UserController; // Adicionando o uso do namespace completo
 
 // Definindo rotas usando a sintaxe de array para o Laravel 8+
-Route::post('login', [AuthController::class, 'login']);
+Route::post('/api/login', [AuthController::class, 'login']);
 Route::middleware(['jwt.auth'])->group(function () {
-    Route::get('logout', [AuthController::class, 'logout']);
-    Route::post('register', [UserController::class, 'register']);
-    Route::get('users', [UserController::class, 'index']); 
+    Route::get('/api/logout', [AuthController::class, 'logout']);
+    Route::post('/api/register', [UserController::class, 'register']);
+    Route::get('/api/users', [UserController::class, 'index']); 
 });
